# frosh

./: .gitignore  Cargo.toml  README  pubspec.yaml
.github/workflows/: dart.yml  rust.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
architecture/database/: frosh.dbm
client/: Cargo.toml  build-global-links-client.sh  kong-kontrollers.toml
client/css/: main.css
client/js/: blog-dashboard.js  create-account.js  edit-blog.js  info-box.js  kong.js  login.js  post-blog.js  view-blog.js
client/src/: account.rs  blog.rs  dashboard.rs  login.rs  main.rs
client/widgets/: AccountForm.html  BlogDashboard.html  BlogForm.html  GuestNav.html  InfoBox.html  LoginForm.html  Nav.html  ViewBlog.html
crates/data/: Cargo.toml  README
crates/data/src/: gender.rs  lib.rs  student.rs
crates/database/: Cargo.toml  README
crates/database/src/: error.rs  lib.rs  students.rs
doc/: .gitignore  README.md  build.sh  style.css
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
server/: Cargo.toml  init-database.sh  schema.sql
server/src/: calendar.rs  config.rs  error.rs  lib.rs  version.rs
server/src/data/: course.rs  instructor.rs  mod.rs
server/src/data/course/: input.rs  mod.rs
server/src/data/student/: input.rs  mod.rs  student_photos.rs
server/src/database/: courses.rs  error.rs  mod.rs  student_photos.rs
server/src/kontrollers/student/: create.rs  mod.rs
server/src/student/: mod.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
