[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
authors = ["Kwatafana Systems"]
description = "E-learning System"
documentation = "https://kwatafana.org/frosh"

[workspace.dependencies]

kommon = {path = "../kommon", features = ["serde", "rusqlite"]}

############################## [Data] ################################
serde = { version = "1.0.196", features = ["derive"] } # A generic serialization/deserialization framework
serde_json = {version = "1.0.113"}
toml = "0.8.8" # Encoder and decoder of TOML-formatted files and streams
rusqlite = { version = "0.30.0", features = ["bundled", "chrono"]} #  Ergonomic wrapper for SQLite

############################# [Misc] #################################
chrono = { version = "0.4.33", features = ["serde"]} # Date and time library