[package]
name = "froshdata"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
rusqlite.workspace = true
chrono.workspace = true
