[package]
name = "froshdb"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kommon.workspace = true
froshdata = {path = "../data"}
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true

[dev-dependencies]
chrono.workspace = true